[#2110] Add Credentials DAO for accessing credentials collection
Also moved credentials management related functionality from
MongoDbBasedCredentialsService to separate
MongoDbBasedCredentialsManagementSerice.

Also removed MongoDbBasedDeviceBackend and MongoDbCallExecutor as they
are no longer needed.

Fixes #2110

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>